--- a/plantmanager-api/package.json
+++ b/plantmanager-api/package.json
@@ -1,5 +1,29 @@
 {
-  "devDependencies": {
-    "express": "^4.21.2"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "start": "node main.js",
+        "dev": "nodemon main.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "express": "^4.21.2"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.758.0",
+        "aws-sdk": "^2.1692.0",
+        "body-parser": "^1.20.3",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "google-auth-library": "^9.15.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.14.2",
+        "mongoose": "^8.12.1",
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^3.1.9"
+    }
 }
