--- a/plantmanager-ui/package.json
+++ b/plantmanager-ui/package.json
@@ -4,11 +4,17 @@
   "homepage": "https://leotovell.github.io/plantmanager-react",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
@@ -41,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "bcryptjs": "^3.0.2",
+    "gh-pages": "^6.3.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
