--- a/plantmanager-api/package.json
+++ b/plantmanager-api/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.758.0",
+        "@aws-sdk/s3-request-presigner": "^3.758.0",
         "aws-sdk": "^2.1692.0",
         "body-parser": "^1.20.3",
         "cookie-parser": "^1.4.7",
