--- a/plantmanager-api/package.json
+++ b/plantmanager-api/package.json
@@ -16,9 +16,11 @@
         "@aws-sdk/client-s3": "^3.758.0",
         "@aws-sdk/s3-request-presigner": "^3.758.0",
         "body-parser": "^1.20.3",
+        "connect-flash": "^0.1.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
+        "express-session": "^1.18.1",
         "google-auth-library": "^9.15.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.12.1",
